Cucumber background,Scenario Outline

--- a/configuration.properties
+++ b/configuration.properties
@@ -2,5 +2,13 @@ browser=chrome
 
 
 AmazonURL=https://www.amazon.com
-BestBuyURL=https://www.bestbuy.com
+bestbuy=https://www.bestbuy.com
 N11URL=https://www.n11.com
+
+// A?a??y? olu?tur.
+HMCUrl=https://www.hotelmycamp.com
+
+HMCValidUsername=manager
+HMCValidPassword=Manager1!
+HMCWrongUsername=manager2
+HMCWrongPassword=manager1/
